9/23/11 document layout of canvases
9/23/11 fix "Bond Dipoles" label (plural) that was messed up in yesterday's changes
9/23/11 delete unnecessary scale factor from dipole nodes
9/22/11 create View control panels inline, since they differ
9/22/11 move getPixelColor to BufferedImageUtils
9/22/11 document the coordinate frame used by view components
9/22/11 rewrite and simplify DipoleNode and its subclasses
9/22/11 delete Bond.deltaElectronegativity property
# 0.00.25 (56852) Sep 22, 2011
9/22/11 change request: redesign of "Bond Character" indicator
9/22/11 increase font size in all control panels (similar to Balancing Act)
9/22/11 workaround for difference between background color of play area and Jmol viewer
9/22/11 move RotateMol2 to jmephet.util (see javadoc for "why")
9/21/11 promote Element to top-level model class
9/21/11 fix rotate cursor, padding wasn't applied equally on all sides
9/21/11 move JmolConsole to jmol-phet
9/21/11 generalize DialogCheckBoxMenuItem and move to phetcommon
9/20/11 move STAGE_SIZE constant to MPCanvas
9/20/11 migrate SliderDragHandler to piccolo-phet, rename SliderThumbDragHandler, use in capacitor-lab
9/20/11 replace HorizontalSliderDragHandler with generalized SliderDragHandler
9/20/11 cleanup of HorizontalSliderDragHandler
9/20/11 add dependency on chemistry common project, to use ChemUtils.toSubscript
9/20/11 #3077, move padPreferredWidthDeep to SwingUtils
9/20/11 workaround for #3077 (PSwing clips labels in floating control panels)
9/20/11 vertically center 2D molecules between plates
9/20/11 restore Bond Type feature
# 0.00.24 (56733) Sep 20, 2011
9/20/11 temporarily hide Bond Type feature, for interviews
# 0.00.23 (56723) Sep 19, 2011
9/19/11 move Jmol console to Developer menu
9/19/11 first pass at a reusable Jmol console component
9/19/11 move duplicate observer code into Molecule2D base class
9/19/11 move duplicate ClockListener into MPModel2D base class
9/19/11 fix 2D model class hierarchy
9/19/11 javadoc