@@ -7,6 +7,9 @@ import edu.colorado.phet.moleculepolarity.common.control.BondAngleHandler;
 import edu.colorado.phet.moleculepolarity.common.control.MoleculeRotationHandler;
 import edu.colorado.phet.moleculepolarity.common.control.RotateCursorHandler;
 import edu.colorado.phet.moleculepolarity.common.model.TriatomicMolecule;
+import edu.colorado.phet.moleculepolarity.common.view.PartialChargeNode.CompositePartialChargeNode;
+import edu.colorado.phet.moleculepolarity.common.view.PartialChargeNode.OppositePartialChargeNode;
+import edu.umd.cs.piccolo.PNode;
 
 /**
  * Visual representation of a triatomic molecule.
@@ -16,25 +19,47 @@ import edu.colorado.phet.moleculepolarity.common.model.TriatomicMolecule;
  */
 public class TriatomicMoleculeNode extends PhetPNode {
 
+    private final PNode partialChargeNodeA, partialChargeNodeB, partialChargeNodeC;
+    private final PNode bondDipoleABNode, bondDipoleBCNode;
+    private final PNode molecularDipoleNode;
+
     public TriatomicMoleculeNode( TriatomicMolecule molecule ) {
 
         // nodes
-        BondNode bondABNode = new BondNode( molecule.bondAB );
-        BondNode bondBCNode = new BondNode( molecule.bondBC );
-        AtomNode atomANode = new AtomNode( molecule.atomA );
-        AtomNode atomBNode = new AtomNode( molecule.atomB );
-        AtomNode atomCNode = new AtomNode( molecule.atomC );
+        final BondNode bondABNode = new BondNode( molecule.bondAB );
+        final BondNode bondBCNode = new BondNode( molecule.bondBC );
+        final AtomNode atomANode = new AtomNode( molecule.atomA );
+        final AtomNode atomBNode = new AtomNode( molecule.atomB );
+        final AtomNode atomCNode = new AtomNode( molecule.atomC );
         final BondAngleArrowsNode arrowsANode = new BondAngleArrowsNode( molecule, molecule.atomA );
         final BondAngleArrowsNode arrowsCNode = new BondAngleArrowsNode( molecule, molecule.atomC );
+        partialChargeNodeA = new OppositePartialChargeNode( molecule.atomA, molecule.bondAB );
+        partialChargeNodeB = new CompositePartialChargeNode( molecule.atomB, molecule );
+        partialChargeNodeC = new OppositePartialChargeNode( molecule.atomC, molecule.bondBC );
+        bondDipoleABNode = new BondDipoleNode( molecule.bondAB );
+        bondDipoleBCNode = new BondDipoleNode( molecule.bondBC );
+        molecularDipoleNode = new MolecularDipoleNode( molecule );
 
-        // rendering order, bonds behind atoms
-        addChild( bondABNode );
-        addChild( bondBCNode );
-        addChild( arrowsANode );
-        addChild( arrowsCNode );
-        addChild( atomANode );
-        addChild( atomBNode );
-        addChild( atomCNode );
+        // rendering order:
+        // structure (ordering is modified during dragging)
+        addChild( new PNode() {{
+            addChild( bondABNode ); // bonds behind atoms
+            addChild( bondBCNode );
+            addChild( arrowsANode );
+            addChild( arrowsCNode );
+            addChild( atomANode );
+            addChild( atomBNode );
+            addChild( atomCNode );
+        }} );
+        // decorations
+        addChild( new PNode() {{
+            addChild( partialChargeNodeA );
+            addChild( partialChargeNodeB );
+            addChild( partialChargeNodeC );
+            addChild( bondDipoleABNode );
+            addChild( bondDipoleBCNode );
+            addChild( molecularDipoleNode );
+        }} );
 
         // rotate molecule by dragging bonds or atom B
         bondABNode.addInputEventListener( new RotateCursorHandler() );
@@ -53,5 +78,20 @@ public class TriatomicMoleculeNode extends PhetPNode {
         // default state
         arrowsANode.setVisible( false );
         arrowsCNode.setVisible( false );
+    }
+
+    public void setPartialChargesVisible( boolean visible ) {
+        partialChargeNodeA.setVisible( visible );
+        partialChargeNodeB.setVisible( visible );
+        partialChargeNodeC.setVisible( visible );
+    }
+
+    public void setBondDipolesVisible( boolean visible ) {
+        bondDipoleABNode.setVisible( visible );
+        bondDipoleBCNode.setVisible( visible );
+    }
+
+    public void setMolecularDipoleVisible( boolean visible ) {
+        molecularDipoleNode.setVisible( visible );
     }
 }
